--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>expanse tracker</title>
-	<link rel="stylesheet" type="text/css" href="../css/expense_tracker.css">
+	<link rel="stylesheet" type="text/css" href="expense_tracker.css">
 </head>
 <body>
 <div class="full_body">
@@ -82,5 +82,5 @@
 	</div>
 </div>
 </body>
-<script src="../javascript/index.js"></script>
+<script src="index.js"></script>
 </html>
